QuotesLand/force-app/main/default/objects/Picture__c/Picture__c.object-meta.xml
<CustomObject>
    <label>Picture</label>
    <nameField>
        <label>Picture Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pictures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>