QuotesLand/force-app/main/default/objects/Picture__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <label>Rating</label>
    <precision>13</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>