QuotesLand/force-app/main/default/objects/Picture__c/fields/url__c.field-meta.xml
<CustomField>
    <fullName>url__c</fullName>
    <label>url</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>